[package]
name = "rudp-tunnel"
version = "0.1.0"
authors = ["adriano.dalpane <adriano.dalpane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
aeron-rs = "0.1.3"
ctrlc = "3.1.7  "
chrono = "0.4.11"
whoami = "1.0.1"
log = "0.4.11"
env_logger = "0.8.2"
lazy_static = "1.4.0"
platform-dirs = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
rand = "0.8.3"